working on multi layers

--- a/pyheatmy/research/Temp_ampl_ratio_diffusive_case.ipynb
+++ b/pyheatmy/research/Temp_ampl_ratio_diffusive_case.ipynb
@@ -98,8 +98,6 @@
    "outputs": [],
    "source": [
     "T_riv.plot_linear_regression(day = 0, sensors_only=False)\n",
-    "T_riv.plot_linear_regression(day = 0, sensors_only=False)\n",
-    "\n",
     "\n",
     "T_riv.plot_mosaic_pearson(T_riv.range_of_minus_log_10_K)"
    ]
@@ -130,6 +128,28 @@
     "# Now, we plot the linear regression for day 0 and the pearson coefficient mosaic\n",
     "T_riv.plot_linear_regression(day = 0, create_signal = False)\n",
     "T_riv.plot_mosaic_pearson(T_riv.range_of_minus_log_10_K, create_signal = False)\n",
+    "T_riv.plot_temp(all_depths=False)\n",
+    "T_riv.plot_temp(all_depths=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now let's try a multi layer\n",
+    "# parameters of the second layer (examples)\n",
+    "T_riv.name2 = 'couche 2'\n",
+    "T_riv.river_bed2 = T_riv.river_bed\n",
+    "T_riv.moinslog10IntrinK2 = 12\n",
+    "T_riv.n2 = 1.1 * T_riv.n\n",
+    "T_riv.lambda_s2 = 1.1 * T_riv.lambda_s\n",
+    "T_riv.rhos_cs2 = 1.1 * T_riv.rhos_cs\n",
+    "\n",
+    "# Now, we plot the linear regression for day 0 and the pearson coefficient mosaic\n",
+    "T_riv.plot_linear_regression(day = 0, create_signal = False, nb_layers = 2)\n",
+    "T_riv.plot_mosaic_pearson(T_riv.range_of_minus_log_10_K, create_signal = True, nb_layers = 2)\n",
     "T_riv.plot_temp(all_depths=False)\n",
     "T_riv.plot_temp(all_depths=True)"
    ]
