multi layers error in core

--- a/pyheatmy/research/Temp_ampl_ratio_diffusive_case.ipynb
+++ b/pyheatmy/research/Temp_ampl_ratio_diffusive_case.ipynb
@@ -62,14 +62,14 @@
     "T_riv.nb_cells=100 # nombre de cellules, une tous les 5 centimètres \n",
     "T_riv.depth_sensors = np.array([.1, .2, .3, .4])\n",
     "T_riv.river_bed = 1.  # profondeur de la colonne en mètres\n",
-    "T_riv.last_cell = int(9/10 * T_riv.nb_cells)  # on écarte les dernières valeurs pour éviter les effets de bord\n",
-    "T_riv.depth_cells = np.linspace(0, T_riv.river_bed, T_riv.nb_cells)\n",
+    "T_riv.last_cell = T_riv.nb_cells # int(9/10 * T_riv.nb_cells)  # on écarte les dernières valeurs pour éviter les effets de bord\n",
+    "T_riv.depth_cells = np.linspace(0, 2 * T_riv.river_bed, T_riv.nb_cells)\n",
     "# the indices of depth_cells corresponding to the depths of depth_sensors\n",
     "T_riv.depth_sensors_index_list = [int(T_riv.depth_sensors[j] / ( T_riv.river_bed / (T_riv.nb_cells - 1))) for j in range(len(T_riv.depth_sensors))]\n",
     "\n",
     "# Pression différentielle\n",
     "T_riv.dH_amp = 0\n",
-    "T_riv.dH_offset = - 0.1  # m\n",
+    "T_riv.dH_offset = 0.1  # m\n",
     "T_riv.P_dh = -9999 #14*24*4*dt\n",
     "\n",
     "# Bruit de mesure\n",
@@ -141,7 +141,7 @@
     "# Now let's try a multi layer\n",
     "# parameters of the second layer (examples)\n",
     "T_riv.name2 = 'couche 2'\n",
-    "T_riv.river_bed2 = T_riv.river_bed\n",
+    "T_riv.river_bed2 = 2*T_riv.river_bed\n",
     "T_riv.moinslog10IntrinK2 = 12\n",
     "T_riv.n2 = 1.1 * T_riv.n\n",
     "T_riv.lambda_s2 = 1.1 * T_riv.lambda_s\n",
