Correction demo_genData

--- a/pyheatmy/research/synthetic_cases_generator/demo_genData.ipynb
+++ b/pyheatmy/research/synthetic_cases_generator/demo_genData.ipynb
@@ -130,18 +130,21 @@
    "outputs": [],
    "source": [
     "# l'utilisateur génère un dictionnaire avec les données importantes de la colonne\n",
-    "name =\"Couche en sable\"\n",
-    "zLow = Zbottom\n",
-    "moinslog10IntrinK = 11\n",
-    "n = 0.1\n",
-    "lambda_s = 2 # test cas purement advectif\n",
-    "rhos_cs = 4e6\n",
-    "q = 0\n",
+    "Couche = {\n",
+    "    \"name\": \"Couche en sable\",\n",
+    "    \"zLow\": Zbottom,\n",
+    "    \"moinslog10IntrinK\":11,\n",
+    "    \"n\": 0.1,\n",
+    "    \"lambda_s\": 2,\n",
+    "    \"rhos_cs\": 4e6,\n",
+    "    \"q\": 0\n",
+    "}\n",
     "\n",
     "# modèle une couche\n",
-    "layers_list= layersListCreator([(name, zLow, moinslog10IntrinK, n, lambda_s, rhos_cs, q)])\n",
+    "Layer1 = Layer.from_dict(Couche)\n",
     "\n",
-    "print(f\"Layers list: {layers_list}\")\n",
+    "print(f\"Layer: {Layer1}\")\n",
+    "\n",
     "nbcells = 85\n",
     "# on utilise les mesures générées précédemment dans les init \"dH_measures\" et \"T_measures\"\n",
     "col_dict = {\n",
@@ -154,7 +157,8 @@
     "    \"sigma_meas_P\": 0.01, #float\n",
     "    \"sigma_meas_T\": 0.1, #float\n",
     "}\n",
-    "col = Column.from_dict(col_dict,verbose=True)"
+    "col = Column.from_dict(col_dict,verbose=True)\n",
+    "col.set_layers(Layer1)"
    ]
   },
   {
@@ -174,7 +178,7 @@
    "source": [
     "\n",
     "# print(emu_observ_test_user1._T_Shaft)\n",
-    "emu_observ_test_user1._measures_column_one_layer(col, layers_list)\n",
+    "emu_observ_test_user1._measures_column_one_layer(col)\n",
     "#emu_observ_test_user1._plot_molonariT_data()\n",
     "col.plot_temperature_at_sensors(verbose=False)\n",
     "\n"
@@ -241,7 +245,8 @@
     "    \"sigma_meas_T\": None, #float\n",
     "}\n",
     "newCol = Column.from_dict(newCol_dict)\n",
-    "newCol.compute_solve_transi(layers_list,verbose=True)\n",
+    "newCol.set_layers(Layer1)\n",
+    "newCol.compute_solve_transi(verbose=True)\n",
     "\n",
     "nt = len(col._temperatures[0,:])\n",
     "dplot=15\n",
@@ -325,13 +330,25 @@
    "outputs": [],
    "source": [
     "# l'utilisateur génère un dictionnaire avec les données importantes de la colonne\n",
-    "name = [\"gravier\",\"Couche en sable\"]\n",
-    "zLow = [.2,.4]\n",
-    "moinslog10IntrinK = [14,10]\n",
-    "n = [.4,.1]\n",
-    "lambda_s = [2,2] \n",
-    "rhos_cs = [4e6,4e6]\n",
-    "q = [0,0]\n",
+    "Layer1 = {\n",
+    "    \"name\": \"gravier\",\n",
+    "    \"zLow\": .2,\n",
+    "    \"moinslog10IntrinK\":14,\n",
+    "    \"n\": .4,\n",
+    "    \"lambda_s\": 2,\n",
+    "    \"rhos_cs\": 4e6,\n",
+    "    \"q\": 0\n",
+    "}\n",
+    "\n",
+    "Layer2 = {\n",
+    "    \"name\": \"Couche en sable\",\n",
+    "    \"zLow\": .4,\n",
+    "    \"moinslog10IntrinK\":10,\n",
+    "    \"n\": .1,\n",
+    "    \"lambda_s\": 2,\n",
+    "    \"rhos_cs\": 4e6,\n",
+    "    \"q\": 0\n",
+    "}\n",
     "\n",
     "# on utilise les mesures générées précédemment\n",
     "col_dict4 = {\n",
@@ -348,7 +365,7 @@
     "col4 = Column.from_dict(col_dict4)\n",
     "\n",
     "# modèle une couche\n",
-    "layers_list4= layersListCreator([(name[i], zLow[i], moinslog10IntrinK[i], n[i], lambda_s[i], rhos_cs[i], q[i]) for i in range(len(name))])"
+    "col4.set_layers([Layer.from_dict(Layer1),Layer.from_dict(Layer2)])"
    ]
   },
   {
@@ -357,7 +374,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "emu_observ_test_user4._measures_column_one_layer(col4, layers_list4)\n",
+    "emu_observ_test_user4._measures_column_one_layer(col4)\n",
     "col4.plot_temperature_at_sensors(verbose=False)\n",
     "# col4.plot_compare_temperatures_sensors()\n",
     "nt = len(col4._temperatures[0,:])\n",
@@ -416,7 +433,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "molonaricompatible",
    "language": "python",
    "name": "python3"
   },
@@ -430,7 +447,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
