change of q value in demopyheatmy

--- a/pyheatmy/demoPyheatmy.ipynb
+++ b/pyheatmy/demoPyheatmy.ipynb
@@ -35,7 +35,7 @@
     "NBCHAINS = 20\n",
     "DELTA = 4\n",
     "NCR = 3\n",
-    "NBITER = 50\n",
+    "NBITER = 100\n",
     "NBITERMCMC = 50"
    ]
   },
@@ -312,7 +312,7 @@
     "    ['Couche 1', Zbottom, priors],\n",
     "]\n",
     "col.compute_mcmc(\n",
-    "    nb_iter = 5*NBITER,\n",
+    "    nb_iter = NBITER,\n",
     "    all_priors = all_priors,\n",
     "    verbose=True\n",
     ")\n",
@@ -429,7 +429,7 @@
     "    \"n\": ((.001, .25), .005),\n",
     "    \"lambda_s\": ((1, 10), .1),\n",
     "    \"rhos_cs\": ((1e6,1e7), 1e5),\n",
-    "    \"q\": ((1,10), .1)\n",
+    "    \"q\": ((1e-9,1e-5), 1e-9)\n",
     "}\n",
     "\n",
     "priors_couche_2 = {\n",
@@ -437,7 +437,7 @@
     "    \"n\": ((.001, .25), .005),\n",
     "    \"lambda_s\": ((1, 10), .1),\n",
     "    \"rhos_cs\": ((1e6,1e7), 1e5),\n",
-    "    \"q\": ((1,10), .1)\n",
+    "    \"q\": ((1e-9,1e-5), 1e-9)\n",
     "}\n",
     "\n",
     "all_priors = [\n",
@@ -509,8 +509,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "otherGoodLayers = layersListCreator([(\"Couche 1\", 0.20, 7.915378861204348, 0.1310721719612464, 5.602951622531522, 4758163.582292321, 1),\n",
-    "(\"Couche 2\", 0.40, 6.574103692603533, 0.029547616319484868, 3.944439207155854, 4931216.13398901, 1)]) # q=1 pour le moment"
+    "otherGoodLayers = layersListCreator([(\"Couche 1\", 0.20, 7.915378861204348, 0.1310721719612464, 5.602951622531522, 4758163.582292321, 1e-6),\n",
+    "(\"Couche 2\", 0.40, 6.574103692603533, 0.029547616319484868, 3.944439207155854, 4931216.13398901, 1e-6)]) # q=1 pour le moment"
    ]
   },
   {
@@ -568,7 +568,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "my_env_311",
    "language": "python",
    "name": "python3"
   },
