changed point name

--- a/pyheatmy/research/temp_ampl_ratio_real_data.ipynb
+++ b/pyheatmy/research/temp_ampl_ratio_real_data.ipynb
@@ -49,6 +49,10 @@
     "\n",
     "df = ts.read_csv(55)\n",
     "print(df.head())\n",
+    "df['T_Sensor0'] = df['T_Sensor0'] + ZERO_CELSIUS\n",
+    "df['T_Sensor1'] = df['T_Sensor1'] + ZERO_CELSIUS\n",
+    "df['T_Sensor2'] = df['T_Sensor2'] + ZERO_CELSIUS\n",
+    "df['T_Sensor3'] = df['T_Sensor3'] + ZERO_CELSIUS\n",
     "dates = df['Date_heure'].to_numpy()\n",
     "data_temperature = array = df.drop(columns=['Date_heure']).to_numpy()\n",
     "\n",
