test gelman rubin with 500 burning its. No convergence. Suspicion of a bug in gelman rubin. New issue #152

--- a/pyheatmy/demoPyheatmy.ipynb
+++ b/pyheatmy/demoPyheatmy.ipynb
@@ -32,10 +32,10 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from collections import namedtuple\n",
-    "NBCHAINS = 20\n",
+    "NBCHAINS = 60\n",
     "DELTA = 4\n",
     "NCR = 3\n",
-    "NBITER = 100\n",
+    "NBITER = 500\n",
     "NBITERMCMC = 50"
    ]
   },
@@ -222,7 +222,7 @@
     "n = .1\n",
     "lambda_s = 2\n",
     "rhos_cs = 4e6\n",
-    "q = 0.5\n",
+    "q = 0\n",
     "params = Param(moinslog10IntrinK,n,lambda_s,rhos_cs, q)\n",
     "# assert params == params_tuple\n"
    ]
@@ -568,7 +568,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "my_env_311",
+   "display_name": "py3.11.4",
    "language": "python",
    "name": "python3"
   },
