Changement de mu dans linear system ligne 39.

--- a/pyheatmy/demoPyheatmy.ipynb
+++ b/pyheatmy/demoPyheatmy.ipynb
@@ -221,11 +221,11 @@
     "Layer_homogenous = {\n",
     "    \"name\": \"Layer_homogenous\",\n",
     "    \"zLow\": Zbottom,\n",
-    "    \"moinslog10IntrinK\": 11,\n",
+    "    \"moinslog10IntrinK\": 12,\n",
     "    \"n\": .1,\n",
     "    \"lambda_s\": 2,\n",
     "    \"rhos_cs\": 4e6,\n",
-    "    \"q\": 0.5\n",
+    "    \"q\": 1e-5\n",
     "}\n",
     "\n",
     "Layer_homogenous = Layer.from_dict(Layer_homogenous)\n",
@@ -311,7 +311,7 @@
     "    \"Prior_n\": ((.01, .25), .01),\n",
     "    \"Prior_lambda_s\": ((1, 10), .1),\n",
     "    \"Prior_rhos_cs\": ((1e6,1e7), 1e5),\n",
-    "    \"Prior_q\": ((0, 0.00001), .00000001),\n",
+    "    \"Prior_q\": ((1e-6, 1e-4), 1e-6),\n",
     "}\n",
     "\n",
     "Layer_homogenous.set_priors_from_dict(priors)\n",
@@ -336,7 +336,7 @@
     "col.compute_mcmc(\n",
     "    nb_iter = 5*NBITER,\n",
     "    verbose=False,\n",
-    "    nb_chain = 1,\n",
+    "    nb_chain = 20,\n",
     ")"
    ]
   },
@@ -432,7 +432,7 @@
     "    \"n\": .1,\n",
     "    \"lambda_s\": 2,\n",
     "    \"rhos_cs\": 4e6,\n",
-    "    \"q\": 0.5\n",
+    "    \"q\": 1e-5\n",
     "}\n",
     "\n",
     "Couche_2 = {\n",
@@ -442,7 +442,7 @@
     "    \"n\": .1,\n",
     "    \"lambda_s\": 2,\n",
     "    \"rhos_cs\": 4e6,\n",
-    "    \"q\": 0.5\n",
+    "    \"q\": 1e-5\n",
     "}\n",
     "\n",
     "Layer1 = Layer.from_dict(Couche_1)\n",
@@ -502,7 +502,7 @@
     "    \"Prior_n\": ((.001, .25), .005),\n",
     "    \"Prior_lambda_s\": ((1, 10), .1),\n",
     "    \"Prior_rhos_cs\": ((1e6,1e7), 1e5),\n",
-    "    \"Prior_q\": ((1,10), .1)\n",
+    "    \"Prior_q\": ((1e-6,1e-4), 1e-6)\n",
     "}\n",
     "\n",
     "priors_couche_2 = {\n",
@@ -510,7 +510,7 @@
     "    \"Prior_n\": ((.001, .25), .005),\n",
     "    \"Prior_lambda_s\": ((1, 10), .1),\n",
     "    \"Prior_rhos_cs\": ((1e6,1e7), 1e5),\n",
-    "    \"Prior_q\": ((1,10), .1)\n",
+    "    \"Prior_q\": ((1e-6,1e-4), 1e-6)\n",
     "}\n",
     "\n",
     "Layer1.set_priors_from_dict(priors_couche_1)\n",
@@ -576,7 +576,7 @@
     "    \"n\": 0.1310721719612464,\n",
     "    \"lambda_s\": 5.602951622531522,\n",
     "    \"rhos_cs\": 4758163.582292321,\n",
-    "    \"q\": 1\n",
+    "    \"q\": 1e-5\n",
     "}\n",
     "\n",
     "Couche_2 = {\n",
@@ -586,7 +586,7 @@
     "    \"n\": 0.029547616319484868,\n",
     "    \"lambda_s\": 3.944439207155854,\n",
     "    \"rhos_cs\": 4931216.13398901,\n",
-    "    \"q\": 1\n",
+    "    \"q\": 1e-5\n",
     "}\n",
     "\n",
     "Layer1 = Layer.from_dict(Couche_1)\n",
