Gelman Rubin criteria is now too loose. It doesn't work anymore. Can it be linked to sigma2 obs ? Introduce in config.py GELMANRCRITERIA = 1.2 and in demoPyheatmy.ipynb DEBUGRUB = 2. # Gelman Rubin criteria

--- a/pyheatmy/demoPyheatmy.ipynb
+++ b/pyheatmy/demoPyheatmy.ipynb
@@ -36,7 +36,8 @@
     "DELTA = 4\n",
     "NCR = 3\n",
     "NBITER = 500\n",
-    "NBITERMCMC = 50"
+    "NBITERMCMC = 50\n",
+    "DEBUGRUB = 2. # Gelman Rubin criteria"
    ]
   },
   {
@@ -314,7 +315,8 @@
     "col.compute_mcmc(\n",
     "    nb_iter = NBITER,\n",
     "    all_priors = all_priors,\n",
-    "    verbose=True\n",
+    "    verbose=True,\n",
+    "    threshold = DEBUGRUB,\n",
     ")\n",
     "\n",
     "bestLayers = col.get_best_layers()\n",
@@ -463,6 +465,7 @@
     "    nb_iter = NBITER,\n",
     "    all_priors = all_priors,\n",
     "    verbose=False,\n",
+    "    threshold=DEBUGRUB,\n",
     ")"
    ]
   },
