--- a/pyheatmy/demoInversion.ipynb
+++ b/pyheatmy/demoInversion.ipynb
@@ -334,7 +334,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "py3.11.4",
    "language": "python",
    "name": "python3"
   },
