--- a/pyheatmy/demoPyheatmy.ipynb
+++ b/pyheatmy/demoPyheatmy.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,11 +32,11 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from collections import namedtuple\n",
-    "NBCHAINS = 60\n",
+    "NBCHAINS = 10\n",
     "DELTA = 4\n",
     "NCR = 3\n",
-    "NBITER = 500\n",
-    "NBITERMCMC = 50\n",
+    "NBITER = 300\n",
+    "NBITERMCMC = 15\n",
     "DEBUGRUB = 2. # Gelman Rubin criteria"
    ]
   },
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,15 +335,15 @@
    "outputs": [],
    "source": [
     "col.compute_mcmc(\n",
-    "    nb_iter = 5*NBITER,\n",
+    "    nb_iter = NBITERMCMC,\n",
     "    verbose=False,\n",
-    "    nb_chain = 20,\n",
+    "    nb_chain = NBCHAINS,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +642,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "molonaricompatible",
+   "display_name": "py3.11.4",
    "language": "python",
    "name": "python3"
   },
