--- a/pyheatmy/research/synthetic_cases_generator/demo_genData.ipynb
+++ b/pyheatmy/research/synthetic_cases_generator/demo_genData.ipynb
@@ -137,7 +137,7 @@
     "    \"n\": 0.1,\n",
     "    \"lambda_s\": 2,\n",
     "    \"rhos_cs\": 4e6,\n",
-    "    \"q\": 0\n",
+    "    \"q\": 1e-8,\n",
     "}\n",
     "\n",
     "# modèle une couche\n",
@@ -145,7 +145,7 @@
     "\n",
     "print(f\"Layer: {Layer1}\")\n",
     "\n",
-    "nbcells = 85\n",
+    "nbcells = 100\n",
     "# on utilise les mesures générées précédemment dans les init \"dH_measures\" et \"T_measures\"\n",
     "col_dict = {\n",
     "\t\"river_bed\": 1., \n",
@@ -233,6 +233,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(emu_observ_test_user1._molonariT_data)\n",
+    "\n",
     "# on utilise les mesures générées précédemment dans les init \"dH_measures\" et \"T_measures\"\n",
     "newCol_dict = {\n",
     "\t\"river_bed\": 1., \n",
@@ -248,18 +250,18 @@
     "newCol.set_layers(Layer1)\n",
     "newCol.compute_solve_transi(verbose=True)\n",
     "\n",
-    "nt = len(col._temperatures[0,:])\n",
+    "nt = len(newCol._temperatures[0,:])\n",
     "dplot=15\n",
     "newCol.plot_temperatures_umbrella(round(nt/dplot))\n",
     "\n",
-    "flows = col.get_flows_solve()\n",
+    "flows = newCol.get_flows_solve()\n",
     "unitLeg=\"m/s\"\n",
     "title=\"Débits\"\n",
     "newCol.plot_it_Zt(flows,title,unitLeg,1.04,2)\n",
     "\n",
     "newCol.print_RMSE_at_sensor()\n",
     "newCol.plot_compare_temperatures_sensors()\n",
-    "col.plot_CALC_results()\n",
+    "newCol.plot_CALC_results()\n",
     "newCol.print_in_file_processed_MOLONARI_dataset(zeroT=0)"
    ]
   },
@@ -267,8 +269,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Multilayered riverbed"
+    "# Multilayered riverbed -- No printing option activated"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Warning\n",
+    "It seems that there is a bug at the interface between layers and also if a sensor is located at the interface"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -281,18 +296,19 @@
     "dt = 15*60 # pas de temps en (s)\n",
     "\n",
     "T_riv_amp = 2\n",
-    "T_riv_offset = 20\n",
+    "T_riv_offset = 20 + ZERO_CELSIUS\n",
     "P_T_riv = 72*4*dt\n",
     "\n",
     "T_aq_amp = 0\n",
-    "T_aq_offset = 14\n",
+    "T_aq_offset = 14 + ZERO_CELSIUS\n",
     "P_T_aq = 9999 # à mettre dans le init\n",
     "\n",
     "dH_amp = 0\n",
-    "dH_offset = 1.\n",
+    "dH_offset = 0.1\n",
     "P_dh = -9999 #14*24*4*dt\n",
     "\n",
-    "depth_sensors = [.1, .15, .25, .3, .4] # on a mis 5 capteurs dans le shaft au lieu de 4 pour montrer que le code s'adapte"
+    "Zbottom = 0.6\n",
+    "depth_sensors = [.1, .25, .3, .4, Zbottom] # le code fonctionne avec n capteurs, watch the compatibility with Zbottom"
    ]
   },
   {
@@ -320,7 +336,8 @@
    "outputs": [],
    "source": [
     "emu_observ_test_user4 = synthetic_MOLONARI.from_dict(time_series_dict_user4)\n",
-    "# emu_observ_test_user4._generate_all_series()"
+    "# emu_observ_test_user4._generate_all_series()\n",
+    "\n"
    ]
   },
   {
@@ -333,21 +350,21 @@
     "Layer1 = {\n",
     "    \"name\": \"gravier\",\n",
     "    \"zLow\": .2,\n",
-    "    \"moinslog10IntrinK\":14,\n",
+    "    \"moinslog10IntrinK\":11,\n",
     "    \"n\": .4,\n",
     "    \"lambda_s\": 2,\n",
     "    \"rhos_cs\": 4e6,\n",
-    "    \"q\": 0\n",
+    "    \"q\": 0,\n",
     "}\n",
     "\n",
     "Layer2 = {\n",
     "    \"name\": \"Couche en sable\",\n",
-    "    \"zLow\": .4,\n",
-    "    \"moinslog10IntrinK\":10,\n",
+    "    \"zLow\": Zbottom,\n",
+    "    \"moinslog10IntrinK\":14,\n",
     "    \"n\": .1,\n",
     "    \"lambda_s\": 2,\n",
     "    \"rhos_cs\": 4e6,\n",
-    "    \"q\": 0\n",
+    "    \"q\": 0,\n",
     "}\n",
     "\n",
     "# on utilise les mesures générées précédemment\n",
@@ -356,7 +373,7 @@
     "    \"depth_sensors\": depth_sensors, #En vrai y aura une 4e valeur ici mais ca prendra en charge pareil\n",
     "\t\"offset\": .0,\n",
     "    \"dH_measures\": emu_observ_test_user4._molonariP_data,\n",
-    "    \"T_measures\": emu_observ_test_user4._T_Shaft_measures,\n",
+    "    \"T_measures\": emu_observ_test_user4._molonariT_data,\n",
     "    \"nb_cells\" : nbcells,\n",
     "    \"sigma_meas_P\": emu_observ_test_user4._sigma_P, #float\n",
     "    \"sigma_meas_T\": emu_observ_test_user4._sigma_T, #float\n",
@@ -365,75 +382,50 @@
     "col4 = Column.from_dict(col_dict4)\n",
     "\n",
     "# modèle une couche\n",
-    "col4.set_layers([Layer.from_dict(Layer1),Layer.from_dict(Layer2)])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "col4.set_layers([Layer.from_dict(Layer1),Layer.from_dict(Layer2)])\n",
+    "\n",
+    "# print(emu_observ_test_user1._T_Shaft)\n",
     "emu_observ_test_user4._measures_column_one_layer(col4)\n",
+    "#emu_observ_test_user1._plot_molonariT_data()\n",
     "col4.plot_temperature_at_sensors(verbose=False)\n",
-    "# col4.plot_compare_temperatures_sensors()\n",
-    "nt = len(col4._temperatures[0,:])\n",
+    "\n",
+    "\n",
+    "# on utilise les mesures générées précédemment dans les init \"dH_measures\" et \"T_measures\"\n",
+    "newCol4_dict = {\n",
+    "\t\"river_bed\": 1., \n",
+    "    \"depth_sensors\": depth_sensors, #En vrai y aura une 4e valeur ici mais ca prendra en charge pareil\n",
+    "\t\"offset\": .0,\n",
+    "    \"dH_measures\": emu_observ_test_user4._molonariP_data,\n",
+    "    \"T_measures\": emu_observ_test_user4._molonariT_data,\n",
+    "    \"nb_cells\" : nbcells,\n",
+    "    \"sigma_meas_P\": None, #float\n",
+    "    \"sigma_meas_T\": None, #float\n",
+    "}\n",
+    "ncol4 = Column.from_dict(newCol4_dict)\n",
+    "ncol4.set_layers([Layer.from_dict(Layer1),Layer.from_dict(Layer2)])\n",
+    "ncol4.compute_solve_transi(verbose=True)\n",
+    "\n",
+    "nt = len(ncol4._temperatures[0,:])\n",
     "dplot=15\n",
-    "col4.plot_temperatures_umbrella(round(nt/dplot))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# les sorties des différents capteurs après passage dans le modèle direct\n",
-    "nt = 3000\n",
-    "plt.plot(emu_observ_test_user4._T_riv_perturb[:nt], label=\"Triv\")\n",
-    "n_sens = len(emu_observ_test_user4._T_Shaft_perturb[0])\n",
-    "for i in range(n_sens-1):\n",
-    "    plt.plot(emu_observ_test_user4._T_Shaft_perturb[:nt,i], label=\"T{}\".format(i+1))\n",
-    "plt.plot(emu_observ_test_user4._T_Shaft_perturb[:nt,n_sens-1], label=\"Taq\")\n",
-    "plt.legend()\n",
-    "plt.grid()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nt = len(col4._temperatures[0,:])\n",
-    "for i in range(1000,2000):\n",
-    "    plt.plot(col4._temperatures[:,i], -col._z_solve)\n",
-    "plt.ylabel(\"depth\")\n",
-    "plt.xlabel(\"T (°C)\")\n",
-    "plt.grid()\n",
-    "#plt.xlim(282,286)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(col._temperatures[:,:], aspect='auto')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Unfinished, now need to rerun a column with the proper sensor records from the first simulation + perturbation that are in Time Series See final step of #3 of the Monolayer case"
+    "ncol4.plot_temperatures_umbrella(round(nt/dplot))\n",
+    "\n",
+    "flows = ncol4.get_flows_solve()\n",
+    "unitLeg=\"m/s\"\n",
+    "title=\"Débits\"\n",
+    "ncol4.plot_it_Zt(flows,title,unitLeg,1.04,2)\n",
+    "\n",
+    "ncol4.print_RMSE_at_sensor()\n",
+    "ncol4.plot_compare_temperatures_sensors()\n",
+    "ncol4.plot_CALC_results()\n",
+    "#ncol4.print_in_file_processed_MOLONARI_dataset(zeroT=0) #No printing of the multilayer case study for the usage of demoInversion.ipynb\n",
+    "\n",
+    "\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "molonaricompatible",
+   "display_name": "py3.11.4",
    "language": "python",
    "name": "python3"
   },
