the two last cells of demoInversion.ipynb do not work

--- a/pyheatmy/demoInversion.ipynb
+++ b/pyheatmy/demoInversion.ipynb
@@ -273,7 +273,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "NBITERMCMC = 100\n",
+    "NBITERMCMC = 20\n",
     "\n",
     "priors = {\n",
     "    \"Prior_moinslog10IntrinK\": ((4+7, 9+7), .01), # (intervalle, sigma)\n",
@@ -306,7 +306,9 @@
     "    nb_iter = NBITERMCMC,\n",
     "    verbose=False\n",
     ")\n",
-    "bestLayers = col.get_best_layers()"
+    "bestLayers = col.get_best_layers()\n",
+    "\n",
+    "col.plot_all_param_pdf()\n"
    ]
   },
   {
@@ -317,7 +319,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "q_samples = col.get_all_params()[0][:, 4]\n",
+    "q_samples = col.get_all_params()[0][::, 4]\n",
     "\n",
     "\n",
     "fig, ax = plt.subplots()\n",
@@ -350,6 +352,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
+    "\n",
     "print('Paramètres réels :', 'moinslog10IntrinK =', moinslog10IntrinK, ', n =', n, ', lambda_s =', lambda_s, ', rhos_cs =',rhos_cs, ', q =',q) # valeurs importées du notebook demo_genData.ipynb\n",
     "print('Paramètres inversés :', str(bestLayers[0])[37:-1]) # valeurs calculées par le modèle"
    ]
