Quantile calculation is better but still bugged. Now the size of the subsamples should be ok. But there are still issues in calculating the acceptance rate which is not updated (._acceptance in core.py), and the filling of _temp is not correct neither, see issues #156 and #157

--- a/pyheatmy/demoPyheatmy.ipynb
+++ b/pyheatmy/demoPyheatmy.ipynb
@@ -32,11 +32,10 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from collections import namedtuple\n",
-    "NBCHAINS = 10\n",
+    "NBCHAINS = 12\n",
     "DELTA = 4\n",
     "NCR = 3\n",
-    "NBITER = 300\n",
-    "NBITERMCMC = 15\n",
+    "NBITERMCMC = 30\n",
     "DEBUGRUB = 2. # Gelman Rubin criteria"
    ]
   },
@@ -336,7 +335,7 @@
    "source": [
     "col.compute_mcmc(\n",
     "    nb_iter = NBITERMCMC,\n",
-    "    verbose=False,\n",
+    "    verbose=True,\n",
     "    nb_chain = NBCHAINS,\n",
     ")"
    ]
