Adaptation du code à la branche main

--- a/pyheatmy/demoInversion.ipynb
+++ b/pyheatmy/demoInversion.ipynb
@@ -94,8 +94,7 @@
     "print(\"Affichage temporaire\")\n",
     "print(\"\")\n",
     "import_notebook_values(path_demoGenData)\n",
-    "clear_output()\n",
-    "display()"
+    "clear_output()"
    ]
   },
   {
@@ -306,6 +305,7 @@
     "    nb_iter = NBITERMCMC,\n",
     "    verbose=False\n",
     ")\n",
+    "\n",
     "bestLayers = col.get_best_layers()\n",
     "\n",
     "col.plot_all_param_pdf()\n"
@@ -325,7 +325,7 @@
     "fig, ax = plt.subplots()\n",
     "fig.set_size_inches(4, 5)\n",
     "ax.hist(q_samples, bins=10, range = (1e-6, 1e-5)) \n",
-    "ax.axvline(x=q, color='r', linestyle='--', label='Valeur réelle de q')\n",
+    "ax.axvline(x=Couche[\"q\"], color='r', linestyle='--', label='Valeur réelle de q')\n",
     "ax.legend()\n",
     "ax.set_title(\"Distribution de q\")\n",
     "ax.set_xlabel(\"q\")\n",
@@ -352,17 +352,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "\n",
-    "print('Paramètres réels :', 'moinslog10IntrinK =', moinslog10IntrinK, ', n =', n, ', lambda_s =', lambda_s, ', rhos_cs =',rhos_cs, ', q =',q) # valeurs importées du notebook demo_genData.ipynb\n",
-    "print('Paramètres inversés :', str(bestLayers[0])[37:-1]) # valeurs calculées par le modèle"
+    "print('Paramètres réels :', 'moinslog10IntrinK =', print(Couche[\"moinslog10IntrinK\"]), ', n =', Couche[\"n\"], ', lambda_s =', Couche[\"lambda_s\"], ', rhos_cs =',Couche[\"rhos_cs\"], ', q =',Couche[\"q\"]) # valeurs importées du notebook demo_genData.ipynb\n",
+    "print(bestLayers)\n",
+    "#print('Paramètres inversés :', str(bestLayers[0])[37:-1]) # valeurs calculées par le modèle # mis en commentaire car la fonction get_all_params() ne fonctionne pas"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py3.11.4",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
