--- a/hardwareProgramming/README.ipynb
+++ b/hardwareProgramming/README.ipynb
@@ -37,7 +37,30 @@
     "\n",
     "Updated by Valeria\n",
     "\n",
-    "This documentaion"
+    "The `Documentation` folder contains all the necessary files to understand and use the system. It includes detailed guides and technical references. Below is an overview of its main content:\n",
+    "\n",
+    "### Installation Guide_ENG: \n",
+    "The Installation Guide provides a comprehensive step-by-step tutorial for setting up and configuring the MOLONARI sensor system. It covers the following aspects:\n",
+    "* Prerequisites: A list of required hardware components (e.g., Arduino MKR WAN 1310, sensors, SD card module) and software tools (Arduino IDE, libraries).\n",
+    "* Electrical Connections: Detailed wiring instructions, including sensor integration and SD card module setup, with references to pin mappings.\n",
+    "* Code Setup: Instructions for uploading code to the sensor and relay boards, ensuring compatibility between hardware and software configurations.\n",
+    "* Power Management: Guidelines for optimizing energy efficiency, such as powering sensors only during measurement cycles.\n",
+    "* Final Assembly: Steps to assemble and secure the system for deployment, including sealing electronics in waterproof casings.\n",
+    "* Troubleshooting: A dedicated section addressing common issues, including SD card malfunctions, connection errors, and debugging using serial communication.\n",
+    "\n",
+    "### SD Card-ENG: \n",
+    "Explains how to configure and use the SD card for data storage or transfer. Includes recommendations for formatting and file structure.\n",
+    "### Our LoRa protocol_ENG: \n",
+    "A guide designed for end-users, detailing how to interact with the system and make the most of its main features.\n",
+    "### Manuel clock_ENG: \n",
+    "Helps resolve common issues by providing quick solutions to errors that might occur during installation or usage.\n",
+    "### Explaining the Riviere code:\n",
+    "\n",
+    "### AtmoCONTROL_param:\n",
+    "\n",
+    "### AtmoCONTROL_userguide:\n",
+    "\n",
+    "All files are organized for easy navigation and quick reference. If you’re looking for specific information, refer to the index included in each guide."
    ]
   },
   {
