--- a/pyheatmy/demoPyheatmy.ipynb
+++ b/pyheatmy/demoPyheatmy.ipynb
@@ -35,7 +35,7 @@
     "NBCHAINS = 12\n",
     "DELTA = 4\n",
     "NCR = 3\n",
-    "NBITERMCMC = 30\n",
+    "NBITERMCMC = 100\n",
     "DEBUGRUB = 2. # Gelman Rubin criteria"
    ]
   },
@@ -611,7 +611,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "col.compute_mcmc(verbose=False, nb_chain = 1, typealgo=\"estimesigma\")\n",
+    "col.compute_mcmc(verbose=True, nb_chain = 1, typealgo=\"estimesigma\")\n",
     "\n",
     "col.get_best_layers()\n",
     "col.compute_solve_transi(verbose=False)\n",
@@ -619,6 +619,24 @@
     "col.plot_all_results()\n",
     "col.plot_darcy_flow_quantile()\n",
     "col.plot_quantile_temperatures_sensors()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"acceptance : {col._acceptance[-1]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(col._quantiles_flows)"
    ]
   },
   {
@@ -641,7 +659,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py3.11.4",
+   "display_name": "molonaricompatible",
    "language": "python",
    "name": "python3"
   },
