--- a/hardwareProgramming/README.ipynb
+++ b/hardwareProgramming/README.ipynb
@@ -51,7 +51,7 @@
     "### SD Card-ENG: \n",
     "Explains how to configure and use the SD card for data storage or transfer. Includes recommendations for formatting and file structure.\n",
     "### Our LoRa protocol_ENG: \n",
-    "A guide designed for end-users, detailing how to interact with the system and make the most of its main features.\n",
+    "This documentation provides a comprehensive guide to the design, implementation, and development of a custom local communication network protocol built on the LoRa physical layer for river monitoring. It outlines the system’s structure, challenges faced, solutions implemented, and future tasks to enhance functionality. Designed to equip future contributors with the knowledge to expand and refine the project, this guide ensures a smooth handover and successful progression.\n",
     "### Manuel clock_ENG: \n",
     "Helps resolve common issues by providing quick solutions to errors that might occur during installation or usage.\n",
     "### Explaining the Riviere code:\n",
