--- a/hardwareProgramming/README.ipynb
+++ b/hardwareProgramming/README.ipynb
@@ -15,7 +15,6 @@
    "source": [
     "## Adjust RTC\n",
     "\n",
-    "Created by Zehan\n",
     "\n",
     "The `Adjust_RTC` file contains a small code that handles the calibration of the real-time clock (RTC). It synchronizes time between internal and external RTC modules, adjusts the clock with a specified offset in seconds, and periodically displays the current time in a readable format via the serial port. This file ensures precise time management requiring reliable synchronization."
    ]
@@ -54,11 +53,11 @@
     "This documentation provides a comprehensive guide to the design, implementation, and development of a custom local communication network protocol built on the LoRa physical layer for river monitoring. It outlines the system’s structure, challenges faced, solutions implemented, and future tasks to enhance functionality. Designed to equip future contributors with the knowledge to expand and refine the project, this guide ensures a smooth handover and successful progression.\n",
     "### Manuel clock_ENG: \n",
     "Helps resolve common issues by providing quick solutions to errors that might occur during installation or usage.\n",
-    "### Explaining the Riviere code:\n",
+    "##### Explaining the Riviere code:\n",
     "\n",
-    "### AtmoCONTROL_param:\n",
+    "##### AtmoCONTROL_param:\n",
     "\n",
-    "### AtmoCONTROL_userguide:\n",
+    "##### AtmoCONTROL_userguide:\n",
     "\n",
     "All files are organized for easy navigation and quick reference. If you’re looking for specific information, refer to the index included in each guide."
    ]
@@ -69,7 +68,6 @@
    "source": [
     "## Example transmission LoRa\n",
     "\n",
-    "Updated by Mohammad\n",
     "\n",
     "###  Receiver/Sender\n",
     "\n",
@@ -88,7 +86,6 @@
    "source": [
     "## Relay/Relay_LoraWan\n",
     "\n",
-    "Created by Mohammad\n",
     "\n",
     "### Relay\n",
     "\n",
@@ -105,7 +102,6 @@
    "source": [
     "## Sensor/Sensor_demo\n",
     "\n",
-    "Updated by Zehan and Mohammad\n",
     "\n",
     "### Sensor\n",
     "\n",
