--- a/hardwareProgramming/README.ipynb
+++ b/hardwareProgramming/README.ipynb
@@ -13,16 +13,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Adjust RTC\n",
-    "\n",
-    "\n",
-    "The `Adjust_RTC` file contains a small code that handles the calibration of the real-time clock (RTC). It synchronizes time between internal and external RTC modules, adjusts the clock with a specified offset in seconds, and periodically displays the current time in a readable format via the serial port. This file ensures precise time management requiring reliable synchronization."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Archive_before\n",
     "\n",
     "This file contains the functional modules and code contributions developed by students in 2022 and 2023, serving as the early foundation for the project's hardware programming, which were modified in 2024."
@@ -97,6 +87,10 @@
    "source": [
     "## Tests Codes\n",
     "\n",
+    "### Adjust RTC\n",
+    "\n",
+    "\n",
+    "The `Adjust_RTC` file contains a small code that handles the calibration of the real-time clock (RTC). It synchronizes time between internal and external RTC modules, adjusts the clock with a specified offset in seconds, and periodically displays the current time in a readable format via the serial port. This file ensures precise time management requiring reliable synchronization.\n",
     "\n",
     "###  Receiver/Sender\n",
     "\n",
