--- a/hardwareProgramming/README.ipynb
+++ b/hardwareProgramming/README.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "### Sensor_demo\n",
     "\n",
-    "This code is a demo for the Molonari system's riverbed sensor node, with functionalities including measuring data from temperature and pressure sensors, storing the data in a CSV file on an SD card, and transmitting the data to a server via LoRa. The code also supports low-power mode, entering standby after completing daily measurements until the next scheduled measurement. The required hardware includes an Arduino MKR WAN 1310 and a Featherwing Adalogger.\n",
+    "This code includes all the functionalities of the original code, but with shorter data sampling intervals. It is designed for real-time testing, allowing for immediate measurements without waiting for the 15-minute intervals used in the original setup.\n",
     "\n",
     "### Relay_LoraWan\n",
     "\n",
