--- a/hardwareProgramming/README.ipynb
+++ b/hardwareProgramming/README.ipynb
@@ -43,7 +43,17 @@
     "\n",
     "### LoRa protocol: \n",
     "\n",
-    "All files are organized for easy navigation and quick reference. If you’re looking for specific information, refer to the index included in each guide."
+    "All files are organized for easy navigation and quick reference. If you’re looking for specific information, refer to the index included in each guide.\n",
+    "\n",
+    "### Gateway and server configurations\n",
+    "\n",
+    "Here, we explain all the necessary steps to properly configure our Gateway. Additionally, we explain how to create the server, its applications, and register the Gateway along with the Relay on the server.\n",
+    "\n",
+    "### Using Server - LoRaWAN code\n",
+    "\n",
+    "Here it is explained how we can test our server and gateway setup using a test code.\n",
+    "\n",
+    "Additionally, it is explained to what extent the final part of the communication, using LoRaWAN, has been developed, and what possible ideas exist to continue with the project."
    ]
   },
   {
@@ -98,15 +108,18 @@
     "\n",
     "This setup demonstrates basic wireless communication between two LoRa-enabled devices.\n",
     "\n",
-    "### Rive_Lora/Riviere_Lora\n",
+    "### Relay_Lora/Sensor_Lora\n",
     "\n",
-    "The **Rive_Lora** and **Riviere_Lora** codes are designed for LoRa communication in the Molonari system. **Rive_Lora** functions as a receiver, waiting for and storing incoming packets in a queue, then printing the data via serial after a handshake with the LoRa module. **Riviere_Lora** acts as the sender, creating a queue of messages and transmitting them to a relay address after establishing a connection. Both codes use LoRa for wireless communication, handle session management, and incorporate debugging and data logging features. The LED indicates the system's active status during operations."
+    "The **Relay_Lora** and **Sensor_Lora** codes are designed for LoRa communication in the Molonari system. **Relay_Lora** functions as a receiver, waiting for and storing incoming packets in a queue, then printing the data via serial after a handshake with the LoRa module. **Sensor_Lora** acts as the sender, creating a queue of messages and transmitting them to a relay address after establishing a connection. Both codes use LoRa for wireless communication, handle session management, and incorporate debugging and data logging features. The LED indicates the system's active status during operations.\n",
+    "\n",
+    "### testArduinoLoRaWAN\n",
+    "\n",
+    "This test code verifies the functionality of the **MKRWAN** library by simulating data transmission to a LoRaWAN server using OTAA authentication. It includes features like payload retries, low-power modem mode, and adaptive data rate configuration.\n",
+    "\n",
+    "### testArduinoLowPower\n",
+    "\n",
+    "This test code evaluates the compatibility of the **ArduinoLowPower** library with the device by implementing a counter and deep sleep functionality. It helped in understanding the library's features, such as entering and exiting deep sleep while preserving functionality like serial communication."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
