last lora  good bye lora for the last time i will miss you :(

--- a/hardwareProgramming/README.ipynb
+++ b/hardwareProgramming/README.ipynb
@@ -43,7 +43,7 @@
     "\n",
     "### LoRa protocol: \n",
     "\n",
-    "All files are organized for easy navigation and quick reference. If you’re looking for specific information, refer to the index included in each guide.\n",
+    "This documentation provides a comprehensive guide to the design, implementation, and development of a custom local communication network protocol built on the LoRa physical layer for river monitoring. It outlines the system’s structure, challenges faced, solutions implemented, and future tasks to enhance functionality. Designed to equip future contributors with the knowledge to expand and refine the project, this guide ensures a smooth handover and successful progression.\n",
     "\n",
     "### Gateway and server configurations\n",
     "\n",
