--- a/pyheatmy/demoPyheatmy.ipynb
+++ b/pyheatmy/demoPyheatmy.ipynb
@@ -32,11 +32,11 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from collections import namedtuple\n",
-    "NBCHAINS = 8\n",
+    "NBCHAINS = 10\n",
     "DELTA = 4\n",
     "NCR = 3\n",
-    "NBITERMCMC = 50\n",
-    "NBBURNING = 15\n",
+    "NBITERMCMC = 100\n",
+    "NBBURNING = 100\n",
     "DEBUGRUB = 2. # Gelman Rubin criteria\n",
     "NBCELLS = 40"
    ]
@@ -327,15 +327,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "col.all_layers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "col.compute_mcmc(\n",
     "    nb_iter = NBITERMCMC,\n",
     "    verbose=True,\n",
@@ -527,7 +518,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "col.compute_mcmc(verbose=False, nb_chain = 1, nitmaxburning=NBBURNING)"
+    "col.compute_mcmc(verbose=True, nb_chain = 10, nitmaxburning=NBBURNING, nb_iter = NBITERMCMC)"
    ]
   },
   {
@@ -573,6 +564,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Box qui ne sert à rien, il faudrait mettre à jour la colonne avec les paramètres suivant puis lancer un modèle direct pour comparer les résultats. \n",
+    "\n",
     "Couche_1 = {\n",
     "    \"name\": \"Couche 1\",\n",
     "    \"zLow\": 0.2,\n",
@@ -645,7 +638,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py3.11.4",
+   "display_name": "molonaricompatible",
    "language": "python",
    "name": "python3"
   },
