update display and little adjustments for the ergonomy of demoPyheatmy

--- a/pyheatmy/demoPyheatmy.ipynb
+++ b/pyheatmy/demoPyheatmy.ipynb
@@ -327,10 +327,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "nb_chains=NBCHAINS\n",
+    "\n",
     "col.compute_mcmc(\n",
     "    nb_iter = NBITERMCMC,\n",
     "    verbose=True,\n",
-    "    nb_chain = NBCHAINS,\n",
+    "    nb_chain = nb_chains,\n",
     "    nitmaxburning=NBBURNING,\n",
     ")"
    ]
@@ -518,7 +520,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "col.compute_mcmc(verbose=True, nb_chain = 10, nitmaxburning=NBBURNING, nb_iter = NBITERMCMC)"
+    "col.compute_mcmc(verbose=True, nb_chain = nb_chains, nitmaxburning=NBBURNING, nb_iter = NBITERMCMC)"
    ]
   },
   {
@@ -608,7 +610,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "col.compute_mcmc(verbose=True, nb_chain = 1, typealgo=\"estimesigma\")\n",
+    "nb_chains=1\n",
+    "\n",
+    "col.compute_mcmc(verbose=True, nb_chain = nb_chains, typealgo=\"estimesigma\")\n",
     "\n",
     "col.get_best_layers()\n",
     "col.compute_solve_transi(verbose=False)\n",
@@ -624,7 +628,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"acceptance : {col._acceptance[-1]}\")"
+    "if nb_chains>1:\n",
+    "    print(f\"acceptance : {col._acceptance[-1]}\")\n",
+    "else:\n",
+    "    print(f\"acceptance : {col._acceptance}\")"
    ]
   },
   {
@@ -656,7 +663,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "molonaricompatible",
+   "display_name": "py3.11.4",
    "language": "python",
    "name": "python3"
   },
