Update doc .ipynb and README.md with authors

--- a/pyheatmy/research/DREAM_v1.ipynb
+++ b/pyheatmy/research/DREAM_v1.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "MOLONARI 2023 : Mattéo Letturcq-Daligaux\n",
+    "MOLONARI 2024 : Martin Jessenne"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
