--- a/pyheatmy/research/propag_norm.ipynb
+++ b/pyheatmy/research/propag_norm.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "MOLONARI2023 : Jean-Sidati Thépaut"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Dans ce notebook nous nous penchons sur l'impact de l'erreur de la mesure de la pression à un instant t sur l'évolution de la température avec la profondeur."
    ]
   },
