--- a/pyheatmy/research/demo_H_strat_zhanJING.ipynb
+++ b/pyheatmy/research/demo_H_strat_zhanJING.ipynb
@@ -5,12 +5,14 @@
    "metadata": {},
    "source": [
     "# correction du modèle stratifié \n",
-    "Zhan JING, MOLONARI 2023"
+    "Zhan JING, MOLONARI 2023\n",
+    "\n",
+    "Updated with MOLONARI 2024 developments by Nicolas Flipo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +173,9 @@
     "    \"inter_mode\": 'lagrange'\n",
     "}\n",
     "\n",
-    "col = Column.from_dict(col_dict)"
+    "col = Column.from_dict(col_dict)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -183,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,20 +216,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "params = Param(\n",
-    "    moinslog10IntrinK = 4+7,\n",
-    "    n = .1,\n",
-    "    lambda_s = 2,\n",
-    "    rhos_cs = 4e6\n",
-    ")\n",
+    "# params = Param(\n",
+    "#     moinslog10IntrinK = 4+7,\n",
+    "#     n = .1,\n",
+    "#     lambda_s = 2,\n",
+    "#     rhos_cs = 4e6\n",
+    "# )\n",
     "\n",
-    "params_tuple = (4+7, .1, 2, 4e6)\n",
+    "# params_tuple = (4+7, .1, 2, 4e6)\n",
     "\n",
-    "assert params == params_tuple"
+    "# assert params == params_tuple\n",
+    "\n",
+    "Zbottom = 0.4\n",
+    "Layer_homogenous = {\n",
+    "    \"name\": \"Layer_homogenous\",\n",
+    "    \"zLow\": Zbottom,\n",
+    "    \"moinslog10IntrinK\": 11,\n",
+    "    \"n\": .1,\n",
+    "    \"lambda_s\": 2,\n",
+    "    \"rhos_cs\": 4e6,\n",
+    "    \"q\": 0\n",
+    "}\n",
+    "\n",
+    "params = Layer.from_dict(Layer_homogenous)\n",
+    "\n",
+    "col.set_layers(params)\n"
    ]
   },
   {
@@ -252,7 +271,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "col.compute_solve_transi(params, nb_cells=100)"
+    "\n",
+    "col.compute_solve_transi(verbose=True)"
    ]
   },
   {
@@ -275,11 +295,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "layers_list = layersListCreator([(\"Couche 1\", 0.20, 5+7, 0.1, 2, 4e6), (\"Couche 2\", 0.40, 7+7, 0.1, 2, 4e6)])\n"
+    "Zinterface = 0.2\n",
+    "\n",
+    "Couche_1 = {\n",
+    "    \"name\": \"Couche 1\",\n",
+    "    \"zLow\": Zinterface,\n",
+    "    \"moinslog10IntrinK\": 12,\n",
+    "    \"n\": .1,\n",
+    "    \"lambda_s\": 2,\n",
+    "    \"rhos_cs\": 4e6,\n",
+    "    \"q\": 0.\n",
+    "}\n",
+    "\n",
+    "Couche_2 = {\n",
+    "    \"name\": \"Couche 2\",\n",
+    "    \"zLow\": Zbottom,\n",
+    "    \"moinslog10IntrinK\": 14,\n",
+    "    \"n\": .1,\n",
+    "    \"lambda_s\": 2,\n",
+    "    \"rhos_cs\": 4e6,\n",
+    "    \"q\": 0.\n",
+    "}\n",
+    "\n",
+    "Layer1 = Layer.from_dict(Couche_1)\n",
+    "Layer2 = Layer.from_dict(Couche_2)\n",
+    "\n",
+    "col.set_layers([Layer1, Layer2])\n"
    ]
   },
   {
@@ -295,7 +340,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "col.compute_solve_transi(layers_list, nb_cells=100)"
+    "\n",
+    "col.compute_solve_transi(verbose=True)"
    ]
   },
   {
@@ -364,8 +410,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sympy as sp\n",
     "\n",
+    "try:\n",
+    "    import sympy as sp\n",
+    "except ImportError:\n",
+    "    import subprocess\n",
+    "    import sys\n",
+    "    subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"sympy\"])\n",
+    "\n",
+    "import sympy as sp\n",
     "\n",
     "K1, K2, h1, h2 = sp.symbols('K1 K2 h1 h2', positive=True) # h1 et h2 sont repectivement les distances entre les point d'échantillon et l'interface\n",
     "Um, Up = sp.symbols('Hm, Hp') # H moins et H plus sont les valeurs de la charge hydraulique d'échantillon correspondentes\n",
@@ -447,11 +500,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "70704a3df61f63f9aa8fc9db7b3b80e15e7f08419e4b448d775ffd388e55e9a3"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.8 ('projet_molonari')",
+   "display_name": "py3.11.4",
    "language": "python",
    "name": "python3"
   },
@@ -465,7 +515,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
